# cortana

./: .gitignore  CHANGELOG.md  CORTANA_IMPLEMENTATION.md  Cargo.toml  README.md  TASKS.md
.opencode/skills/cortana/: SKILL.md
integrations/opencode/: cortana.ts
src/: agent.rs  avatar.rs  config.rs  expression.rs  face.rs  main.rs  renderer.rs  session.rs  speech.rs  summary.rs  tui.rs  visual.rs
